options according to the design

--- a/src/pages/FinishPage/FinishPage.scss
+++ b/src/pages/FinishPage/FinishPage.scss
@@ -24,7 +24,7 @@
     &__score {
         font-family: 'Inter', sans-serif;
         font-size: 56px;
-        max-width: 624px;
+        width: 624px;
         font-weight: 600;
         text-align: start;
         opacity: 1;
