--- a/src/components/Option/Option.scss
+++ b/src/components/Option/Option.scss
@@ -1,31 +1,68 @@
 .Option {
   position: relative;
-  width: 390px;
-  height: 72px;
-  background-color: white;
-  border: none;
-  cursor: pointer;
+  width: 420px;
 
-  font-family: "Inter", sans-serif;
-  font-weight: 400;
-  font-size: 20px;
-  text-align: start;
-  line-height: 72px;
-  padding-left: 50px;
-  clip-path: polygon(10% 0, 90% 1%, 100% 50%, 90% 100%, 10% 100%, 0% 50%);
-
-  &--small {
-    width: 240px;
-    height: 40px;
-    background-color: #F5F5F7;
-    line-height: 40px;
-    text-align: center;
-    padding: 0;
+  &::before {
+    content: "";
+    width: 100%;
+    height: 1px;
+    position: absolute;
+    top: 35.5px; // var
+    left: 0;
+    background-color: #d0d0d8;
   }
 
-    // &::before {
-    //   content: "";
-    //   position: absolute;
-    //   background-color: black;
-    // }
+  &__button {
+    position: relative;
+    width: 390px;
+    height: 72px;
+    background-color: #d0d0d8;
+    border: none;
+    cursor: pointer;
+    clip-path: polygon(10% 0, 90% 1%, 100% 50%, 90% 100%, 10% 100%, 0% 50%);
+
+    &-text {
+      background-color: white;
+      position: absolute;
+      top: 1px;
+      left: 1px;
+      width: 388px;
+      height: 70px;
+      clip-path: polygon(10% 0, 90% 1%, 100% 50%, 90% 100%, 10% 100%, 0% 50%);
+
+      font-family: "Inter", sans-serif;
+      font-weight: 400;
+      font-size: 20px;
+      text-align: start;
+      line-height: 72px;
+      padding-left: 50px;
+    }
+  }
+
+  &--small {
+    position: relative;
+    width: 376px;
+
+    & .Option__button {
+      width: 240px;
+      height: 40px;
+      background-color: #d0d0d8;
+
+      & .Option__button-text {
+        top: 1px;
+        left: 1px;
+        width: 238px;
+        height: 38px;
+        clip-path: polygon(10% 0, 90% 1%, 100% 50%, 90% 100%, 10% 100%, 0% 50%);
+
+        line-height: 40px;
+        text-align: center;
+        padding: 0;
+      }
+    }
+
+    &::before {
+      top: 20px;
+    }
+  }
 }
