--- a/src/components/Option/Option.scss
+++ b/src/components/Option/Option.scss
@@ -1,3 +1,5 @@
+@import "helpers/variables/variables";
+
 .Option {
   position: relative;
   width: 420px;
@@ -9,20 +11,30 @@
     position: absolute;
     top: 35.5px; // var
     left: 0;
-    background-color: #d0d0d8;
+    background-color: $black-40;
+  }
+
+  &:hover {
+    &::before {
+      background-color: $orange-100;
+    }
   }
 
   &__button {
     position: relative;
     width: 390px;
     height: 72px;
-    background-color: #d0d0d8;
+    background-color: $black-40;
     border: none;
     cursor: pointer;
     clip-path: polygon(10% 0, 90% 1%, 100% 50%, 90% 100%, 10% 100%, 0% 50%);
 
+    &:hover {
+      background-color: $orange-100;
+    }
+
     &-text {
-      background-color: white;
+      background-color: $white-100;
       position: absolute;
       top: 1px;
       left: 1px;
@@ -39,14 +51,64 @@
     }
   }
 
-  &--small {
+  &--selected {
+    & .Option__button {
+      background-color: $orange-100;
+    }
+
+    & .Option__button-text {
+      background-color: $orange-5;
+    }
+  }
+
+  &--correct {
+    & .Option__button {
+      background-color: $green-100;
+    }
+
+    & .Option__button-text {
+      background-color: $green-5;
+    }
+
+    &::before {
+      background-color: $green-100;
+    }
+  }
+
+  &--wrong {
+    & .Option__button {
+      background-color: $red-100;
+    }
+
+    & .Option__button-text {
+      background-color: $red-5;
+    }
+
+    &::before {
+      background-color: $red-100;
+    }
+  }
+
+  &--small,
+  &--small-selected,
+  &--small-disabled {
     position: relative;
     width: 376px;
+
+    & * {
+      cursor: default;
+    }
+
+    &:hover {
+      &::before {
+        background-color: $black-40;
+      }
+    }
 
     & .Option__button {
       width: 240px;
       height: 40px;
-      background-color: #d0d0d8;
+      background-color: $black-40;
 
       & .Option__button-text {
         top: 1px;
@@ -63,6 +125,23 @@
 
     &::before {
       top: 20px;
+    }
+  }
+
+  &--small-selected {
+    & .Option__button {
+      background-color: $orange-100;
+      color: $orange-100;
+    }
+
+    &::before {
+      background-color: $orange-100;
+    }
+  }
+
+  &--small-disabled {
+    & .Option__button {
+      color: $black-40;
     }
   }
 }
