--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,20 +1,28 @@
+@import "helpers/variables/variables.scss";
+
 .Button {
+  width: 100%;
+  max-width: 400px;
+  height: 64px;
+  border-radius: 12px;
+  background-color: $orange-100;
+  color: $white-100;
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  border: none;
+  cursor: pointer;
+
+  @include onDesktop {
     width: 296px;
     height: 64px;
-    border-radius: 12px;
-    background-color: #FF8B37;
-    color: white;
-    font-family: 'Inter', sans-serif;
-    font-size: 20px;
-    font-weight: 600;
-    border: none;
-    cursor: pointer;
+  }
 
-    &:hover {
-        background-color: #FFAC70;
-    }
+  &:hover {
+    background-color: $orange-80;
+  }
 
-    &:active {
-        background-color: #E87928;
-    }
+  &:active {
+    background-color: $orange-120;
+  }
 }
