--- a/src/helpers/variables/_variables.scss
+++ b/src/helpers/variables/_variables.scss
@@ -1,13 +1,19 @@
 //colors
-$white-100: #FFFFFF;
-$black-100:  #1C1C21;
-$black-40: #D0D0D8;
-$black-5: #F5F5F7;
-$red-100: #EC6259;
-$red-5: #FDEEED;
-$orange-120: #E87928;
-$orange-100: #FF8B37;
-$orange-80: #FFAC70;
-$orange-5: #FFF3EB;
-$green-100: #47D867;
-$green-5: #E6FAEA;
+$white-100: #ffffff;
+$black-100: #1c1c21;
+$black-40: #d0d0d8;
+$black-5: #f5f5f7;
+$red-100: #ec6259;
+$red-5: #fdeeed;
+$orange-120: #e87928;
+$orange-100: #ff8b37;
+$orange-80: #ffac70;
+$orange-5: #fff3eb;
+$green-100: #47d867;
+$green-5: #e6faea;
+
+@mixin onDesktop {
+  @media (min-width: 1024px) {
+    @content;
+  }
+}
