FIX: quiz page adaptive

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -7,7 +7,7 @@
   border-radius: 12px;
   background-color: $orange-100;
   color: $white-100;
-  font-family: "Inter", sans-serif;
+  font-family: inherit;
   font-size: 20px;
   font-weight: 600;
   border: none;
