--- a/src/components/Option/Option.scss
+++ b/src/components/Option/Option.scss
@@ -2,14 +2,18 @@
 
 .Option {
   position: relative;
-  width: 420px;
+  width: 100%;
+
+  @include onDesktop {
+    width: 420px;
+  }
 
   &::before {
     content: "";
     width: 100%;
     height: 1px;
     position: absolute;
-    top: 35.5px; // var
+    top: 49.5%; // var
     left: 0;
     background-color: $black-40;
   }
@@ -22,12 +26,17 @@
 
   &__button {
     position: relative;
-    width: 390px;
-    height: 72px;
+    width: 90%;
+    height: 56px;
     background-color: $black-40;
     border: none;
     cursor: pointer;
     clip-path: polygon(10% 0, 90% 1%, 100% 50%, 90% 100%, 10% 100%, 0% 50%);
+
+    @include onDesktop {
+      width: 390px;
+      height: 72px;
+    }
 
     &:hover {
       background-color: $orange-100;
@@ -37,7 +46,7 @@
       & .Option__button {
         background-color: $orange-100;
       }
-  
+
       & .Option__button-text {
         background-color: $orange-5;
       }
@@ -48,16 +57,24 @@
       position: absolute;
       top: 1px;
       left: 1px;
-      width: 388px;
-      height: 70px;
+      width: 99.5%;
+      height: 54px;
+      padding-left: 24px;
       clip-path: polygon(10% 0, 90% 1%, 100% 50%, 90% 100%, 10% 100%, 0% 50%);
+
+      @include onDesktop {
+        width: 388px;
+        height: 70px;
+        line-height: 72px;
+        padding-left: 32px;
+        font-size: 20px;
+      }
 
       font-family: "Inter", sans-serif;
       font-weight: 400;
-      font-size: 20px;
+      font-size: 14px;
+      line-height: 56px;
       text-align: start;
-      line-height: 72px;
-      padding-left: 50px;
     }
   }
 
