--- a/src/pages/QuizPage/QuizPage.scss
+++ b/src/pages/QuizPage/QuizPage.scss
@@ -1,47 +1,64 @@
-@import 'helpers/variables/variables';
+@import "helpers/variables/variables";
 
 .QuizPage {
-    height: 100vh;
-    background-color: $black-5;
+  height: 100vh;
+  background-color: $black-5;
+  padding: 24px 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  @include onDesktop {
     padding: 133px 80px 122px;
+  }
 
-    &__question {
-        font-family: 'Inter', sans-serif;
-        font-weight: 600;
-        font-size: 32px;
-        color: $black-100;
-        max-width: 624px;
-        margin: 0;
-        text-align: start;
+  &__question {
+    width: 100%;
+    font-size: 18px;
+    font-weight: 600;
+    color: $black-100;
+    margin-top: 112px;
+
+    @include onDesktop {
+      max-width: 624px;
+      font-size: 32px;
+      text-align: start;
+    }
+  }
+
+  &__options {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 6px 0;
+
+    @include onDesktop {
+      position: absolute;
+      gap: 36px 0;
+      left: 80px;
+      bottom: 122px;
+      max-width: calc(420px + 420px + 36px);
     }
 
-    &__options {
-        position: absolute;
-        left: 80px;
-        bottom: 122px;
-        display: flex;
-        flex-wrap: wrap;
-        gap: 36px 0;
-        max-width: calc(420px + 420px + 36px);
-
-        &-letter {
-            color: $orange-100;
-            margin-right: 8px;
-        }
+    &-letter {
+      color: $orange-100;
+      margin-right: 8px;
     }
+  }
 
-    &__sidebar {
-        position: absolute;
-        display: flex;
-        flex-direction: column-reverse;
-        align-items: center;
-        justify-content: center;
-        gap: 8px;
-        top: 0;
-        right: 0;
-        width: 376px;
-        height: 100%;
-        // padding-top: 166px;
-        background-color: $white-100;
-    }
+  &__sidebar {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+  }
+
+  &__menu-icon {
+    position: absolute;
+    border: none;
+    background-color: transparent;
+    top: 16px;
+    right: 16px;
+    z-index: 1;
+  }
 }
