--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -6,11 +6,12 @@
   align-items: center;
   justify-content: center;
   gap: 8px;
-  width: 376px;
+  width: 100%;
   height: 100%;
   background-color: $black-5;
 
   @include onDesktop {
+    width: 376px;
     background-color: $white-100;
   }
 }
