--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -24,15 +24,7 @@
   }
 
   &__image {
-    width: 288px;
-    height: 192px;
-    align-self: center;
-
-    @include onDesktop {
-      align-self: normal;
-      width: 624px;
-      height: 367px;
-    }
+    @include setImageSizes;
   }
 
   &__content {
@@ -40,6 +32,7 @@
     flex-direction: column;
     align-items: center;
     gap: 102px;
+    margin-top: 40px;
 
     @include onDesktop {
       gap: 64px;
@@ -51,6 +44,7 @@
     font-weight: 600;
     font-size: 32px;
     text-align: center;
+    margin: 0;
 
     @include onDesktop {
       text-align: start;
