--- a/src/components/Option/Option.scss
+++ b/src/components/Option/Option.scss
@@ -13,7 +13,7 @@
     width: 100%;
     height: 1px;
     position: absolute;
-    top: 49.5%; // var
+    top: 49.5%;
     left: 0;
     background-color: $black-40;
   }
