--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -15,7 +15,7 @@
   &::after {
     content: "";
     border-top: 100vh solid transparent;
-    border-right: 100vw solid #fff3eb;
+    border-right: 100vw solid $orange-5;
     width: 0;
     position: absolute;
     left: 0;
