--- a/src/pages/QuizPage/QuizPage.scss
+++ b/src/pages/QuizPage/QuizPage.scss
@@ -37,7 +37,7 @@
       gap: 36px 0;
       left: 80px;
       bottom: 122px;
-      max-width: calc(420px + 420px + 36px);
+      max-width: 876px;
     }
 
     &-letter {
